apps/base/smart-ai/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-ai
  labels:
    app: smart-ai
    component: service
    tier: backend
    istio-injection: enabled
  annotations:
    fluxcd.io/managed-by: "flux"
    fluxcd.io/namespace: "smart-ai"
