apps/base/smart-ai/deployment.yaml
# smart-ai Deployment Manifest
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-ai
  labels:
    app: smart-ai
    component: service
    tier: backend
  namespace: smart-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-ai
  template:
    metadata:
      labels:
        app: smart-ai
        component: service
        tier: backend
    spec:
      # imagePullSecrets:
      #   - name: docker.io
      containers:
        - name: smart-ai
          image: mangale/smart-ai:2.4.26 # {"$imagepolicy": "smart-ai:smart-ai"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "120m"
              memory: "200Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
