apps/base/smart-ai/service.yaml
# smart-ai Service to expose
apiVersion: v1
kind: Service
metadata:
  name: smart-ai-service
  namespace: smart-ai
  labels:
    app: smart-ai
    component: service
    tier: backend
spec:
  selector:
    app: smart-ai
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
