apps/base/smart-ai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-ai
  # annotations:
  #   cert-manager.io/cluster-issuer: "kommander-ca"
  #   traefik.ingress.kubernetes.io/router.tls: "true"
  namespace: smart-ai
  labels:
    app: smart-ai
    component: service
    tier: backend

spec:
  tls:
    - hosts:
        - smart-ai.mangale.com.np
      secretName: smart-ai-tls
  rules:
    - host: smart-ai.mangale.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smart-ai-service
                port:
                  number: 80
